Change version and syntax to run on java 11.